--- a/reports/mono-1.2/HPLT-v1.2-nl.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-nl.lite.yaml
@@ -972,3 +972,4 @@ srclang: nl
 timestamp: 1719491470.1807842
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 9387883, "not_too_short": 1580221302, "no_urls": 87031167, "no_bad_encoding": 81712}'
