--- a/reports/mono-1.2/HPLT-v1.2-sq.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-sq.lite.yaml
@@ -1974,3 +1974,4 @@ timestamp: 1717858558.6960027
 unique_sents: 24532070
 warnings:
 - src_warning_tok_moses_en
+hardrules_tags: '{"not_too_long": 396467, "not_too_short": 65506391, "no_urls": 2683239, "no_bad_encoding": 1196}'
