--- a/reports/mono-2.0/HPLT-v2-als_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-als_Latn.yaml
@@ -314,8 +314,7 @@ docs_wds: '[[5, 22579], [5.1, 22296], [5.2, 24395], [5.3, 24776], [5.4, 31085], 
   [9.1, 123341], [9.2, 83094], [9.3, 69373], [9.4, 63457], [9.5, 61659], [9.6, 63097],
   [9.7, 52781], [9.8, 41755], [9.9, 23959], [10, 6841]]'
 corpus: als_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 7118950, "no_urls": 1654278,
-  "no_bad_encoding": 6223, "pii": 107612}'
+hardrules_tags: '{"not_too_long": 1275307, "not_too_short": 11245650, "no_urls": 1671957, "no_bad_encoding": 7177, "pii": 107612}'
 sentence_pairs: 95101632
 src_bytes: 16.0 GB
 src_chars: 16005838206
