--- a/reports/mono-1.2/HPLT-v1.2-bn.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-bn.lite.yaml
@@ -2360,3 +2360,4 @@ srclang: bn
 timestamp: 1717829005.8564436
 unique_sents: 53847361
 warnings: []
+hardrules_tags: '{"not_too_long": 798484, "not_too_short": 143764744, "no_urls": 5188003, "no_bad_encoding": 688}'
