--- a/reports/mono-2.0/HPLT-v2-tso_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-tso_Latn.yaml
@@ -76,8 +76,7 @@ docs_wds: '[[5, 72], [5.1, 88], [5.2, 110], [5.3, 67], [5.4, 92], [5.5, 93], [5.
   395], [9.2, 215], [9.3, 190], [9.4, 187], [9.5, 175], [9.6, 175], [9.7, 102], [9.8,
   55], [9.9, 14], [10, 1]]'
 corpus: tso_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 10629, "no_urls": 1277, "no_bad_encoding":
-  10, "pii": 84}'
+hardrules_tags: '{"not_too_long": 4257, "not_too_short": 22980, "no_urls": 1278, "no_bad_encoding": 10 , "pii": 84}'
 sentence_pairs: 221245
 src_bytes: 47.58 MB
 src_chars: 49075139
