--- a/reports/mono-2.0/HPLT-v2-ast_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ast_Latn.yaml
@@ -151,8 +151,7 @@ docs_wds: '[[5, 6509], [5.1, 6466], [5.2, 6420], [5.3, 5951], [5.4, 5898], [5.5,
   [8.2, 8031], [8.3, 6181], [8.4, 5080], [8.5, 4614], [8.6, 4484], [8.7, 4413], [8.8,
   4379], [8.9, 3990], [9, 3891], [9.1, 3781], [9.2, 2924], [9.3, 2544], [9.4, 2025],
   [9.5, 1717], [9.6, 1334], [9.7, 859], [9.8, 455], [9.9, 144], [10, 17]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 481641, "no_urls": 184302, "no_bad_encoding":
-  4573, "pii": 4933}'
+hardrules_tags: '{"not_too_long": 95861, "not_too_short": 737386, "no_urls": 188295, "no_bad_encoding": 4666, "pii": 4933}'
 sentence_pairs: 7426182
 src_bytes: 1.18 GB
 src_chars: 1236934368
