--- a/reports/mono-1.2/HPLT-v1.2-pl.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-pl.lite.yaml
@@ -1106,3 +1106,4 @@ srclang: pl
 timestamp: 1719663395.739711
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 16586424, "not_too_short": 2273416960, "no_urls": 146384213, "no_bad_encoding": 95886}'
