Updated reports for North Uzbek

--- a/reports/mono-1.2/HPLT-v1.2-uz.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-uz.yaml
@@ -313,8 +313,7 @@ docs_wds: '[[0.0, 70433], [0.1, 4130], [0.2, 3580], [0.3, 3248], [0.4, 3927], [0
   2930], [8.4, 2761], [8.5, 2624], [8.6, 2605], [8.7, 2395], [8.8, 2179], [8.9, 1917],
   [9.0, 1605], [9.1, 1552], [9.2, 1336], [9.3, 1070], [9.4, 690], [9.5, 488], [9.6,
   268], [9.7, 147], [9.8, 78], [9.9, 21], [10.0, 1]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 16232946, "no_urls": 806371,
-  "no_bad_encoding": 3768}'
+hardrules_tags: '{"not_too_long": 173754, "not_too_short": 16234020, "no_urls": 808247, "no_bad_encoding": 3778}'  
 monocleaner_scores: '[[0.0, 12833043], [0.1, 5448674], [0.2, 2819445], [0.3, 1862405],
   [0.4, 2193283], [0.5, 2610526], [0.6, 2780072], [0.7, 3687076], [0.8, 3118395],
   [0.9, 328015]]'
