Updated reports for Ukrainian

--- a/reports/mono-1.2/HPLT-v1.2-uk.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-uk.lite.yaml
@@ -4790,3 +4790,4 @@ timestamp: 1718139702.9043875
 unique_sents: 271582584
 warnings:
 - src_warning_tok_nltk_wordpunct
+hardrules_tags: '{"not_too_long": 3439449, "not_too_short": 448393827, "no_urls": 14969835, "no_bad_encoding": 8275}'
