--- a/reports/mono-1.2/HPLT-v1.2-id.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-id.lite.yaml
@@ -978,3 +978,4 @@ srclang: id
 timestamp: 1719569081.0943856
 unique_sents: 0
 warnings: []
+hardrules_tags: '{"not_too_long": 10625234, "not_too_short": 1392318096, "no_urls": 124177375, "no_bad_encoding": 56099}'
