Updated reports for Southern Pashto

--- a/reports/mono-1.2/HPLT-v1.2-ps.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ps.yaml
@@ -172,8 +172,7 @@ docs_wds: '[[0.0, 3304], [0.1, 218], [0.2, 222], [0.3, 171], [0.4, 182], [0.5, 1
   [8.0, 915], [8.1, 670], [8.2, 541], [8.3, 480], [8.4, 395], [8.5, 314], [8.6, 299],
   [8.7, 290], [8.8, 266], [8.9, 229], [9.0, 206], [9.1, 188], [9.2, 142], [9.3, 133],
   [9.4, 103], [9.5, 96], [9.6, 70], [9.7, 56], [9.8, 28], [9.9, 12], [10.0, 3]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4336685, "no_urls": 98860, "no_bad_encoding":
-  0}'
+hardrules_tags: '{"not_too_long": 22192, "not_too_short": 4337036, "no_urls": 98883, "no_bad_encoding": 91}' 
 monocleaner_scores: '[[0.0, 382686], [0.1, 194910], [0.2, 318939], [0.3, 677646],
   [0.4, 920239], [0.5, 1320984], [0.6, 2078859], [0.7, 2152608], [0.8, 1895607], [0.9,
   1042035]]'
