--- a/reports/mono-2.0/HPLT-v2-pbt_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-pbt_Arab.yaml
@@ -164,8 +164,7 @@ docs_wds: '[[5, 1935], [5.1, 1953], [5.2, 2235], [5.3, 2215], [5.4, 3071], [5.5,
   [9.4, 1417], [9.5, 1222], [9.6, 1051], [9.7, 880], [9.8, 565], [9.9, 287], [10,
   83]]'
 corpus: pbt_Arab.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 253518, "no_urls": 19904, "no_bad_encoding":
-  203, "pii": 6451}'
+hardrules_tags: '{"not_too_long": 64447, "not_too_short": 600420, "no_urls": 29411, "no_bad_encoding": 247 , "pii": 6451}'
 sentence_pairs: 8454662
 src_bytes: 2.13 GB
 src_chars: 1295601474
