--- a/reports/mono-1.2/HPLT-v1.2-hbs.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-hbs.lite.yaml
@@ -3857,3 +3857,4 @@ unique_sents: 221956573
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_ngrams_hbs_nostopwords
+hardrules_tags: '{"not_too_long": 3213415, "not_too_short": 516989992, "no_urls": 23353561, "no_bad_encoding": 14756}'
