--- a/reports/mono-1.2/HPLT-v1.2-ms.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ms.lite.yaml
@@ -5127,3 +5127,4 @@ timestamp: 1717960462.1129708
 unique_sents: 183095145
 warnings:
 - src_warning_tok_nltk_wordpunct
+hardrules_tags: '{"not_too_long": 1709465, "not_too_short": 227902455, "no_urls": 27917590, "no_bad_encoding": 12853}'
