--- a/reports/mono-2.0/HPLT-v2-zsm_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-zsm_Latn.lite.yaml
@@ -434,8 +434,7 @@ docs_wds: '[[5, 317917], [5.1, 312657], [5.2, 313375], [5.3, 309288], [5.4, 3245
   418419], [8.9, 375235], [9, 402184], [9.1, 288773], [9.2, 227663], [9.3, 191208],
   [9.4, 169134], [9.5, 154013], [9.6, 143864], [9.7, 100878], [9.8, 63846], [9.9,
   27872], [10, 8095]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 28837802, "no_urls": 24390177,
-  "no_bad_encoding": 29271, "pii": 1051094}'
+hardrules_tags: '{"not_too_long": 2475463, "not_too_short": 70757788, "no_urls": 24749832, "no_bad_encoding": 29722,   "pii": 1051094}'
 sentence_pairs: 579818034
 src_bytes: 72.88 GB
 src_chars: 77866047125
