--- a/reports/mono-2.0/HPLT-v2-fij_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fij_Latn.yaml
@@ -77,8 +77,7 @@ docs_wds: '[[5, 73], [5.1, 95], [5.2, 90], [5.3, 65], [5.4, 91], [5.5, 81], [5.6
   101], [9.3, 106], [9.4, 78], [9.5, 85], [9.6, 74], [9.7, 64], [9.8, 32], [9.9, 23],
   [10, 3]]'
 corpus: fij_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 17144, "no_urls": 1006, "no_bad_encoding":
-  3, "pii": 162}'
+hardrules_tags: '{"not_too_long": 2808, "not_too_short": 19071, "no_urls": 1891, "no_bad_encoding": 3,   "pii": 162}'
 sentence_pairs: 178924
 src_bytes: 36.05 MB
 src_chars: 37520766
