--- a/reports/mono-2.0/HPLT-v2-ban_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ban_Latn.yaml
@@ -107,8 +107,7 @@ docs_wds: '[[5, 315], [5.1, 239], [5.2, 263], [5.3, 273], [5.4, 299], [5.5, 241]
   [9.1, 714], [9.2, 149], [9.3, 104], [9.4, 101], [9.5, 75], [9.6, 49], [9.7, 55],
   [9.8, 31], [9.9, 4], [10, 3]]'
 corpus: ban_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 183368, "no_urls": 3401, "no_bad_encoding":
-  27, "pii": 179}'
+hardrules_tags: '{"not_too_long": 4507, "not_too_short": 183373, "no_urls": 3830, "no_bad_encoding": 27 , "pii": 179}'
 sentence_pairs: 601139
 src_bytes: 73.75 MB
 src_chars: 76653907
