Updated reports for Faroese

--- a/reports/mono-2.0/HPLT-v2-fao_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fao_Latn.yaml
@@ -140,8 +140,7 @@ docs_wds: '[[5, 1313], [5.1, 1267], [5.2, 1478], [5.3, 1445], [5.4, 1826], [5.5,
   [8.2, 12712], [8.3, 8248], [8.4, 5538], [8.5, 4214], [8.6, 3654], [8.7, 3271], [8.8,
   3043], [8.9, 2815], [9, 2904], [9.1, 2208], [9.2, 1630], [9.3, 1388], [9.4, 1190],
   [9.5, 1083], [9.6, 934], [9.7, 680], [9.8, 372], [9.9, 158], [10, 62]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 258865, "no_urls": 102245, "no_bad_encoding":
-  171, "pii": 25996}'
+hardrules_tags: '{"not_too_long": 21398, "not_too_short": 594259, "no_urls": 104372, "no_bad_encoding": 171,   "pii": 25996}'
 sentence_pairs: 4526061
 src_bytes: 592.33 MB
 src_chars: 577511299
