--- a/reports/mono-1.2/HPLT-v1.2-cs.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-cs.lite.yaml
@@ -4756,3 +4756,4 @@ srclang: cs
 timestamp: 1718507015.473991
 unique_sents: 422078440
 warnings: []
+hardrules_tags: '{"not_too_long": 6070489, "not_too_short": 878594382, "no_urls": 75343923, "no_bad_encoding": 38653}'
