Updated reports for North Azerbaijani

--- a/reports/mono-1.2/HPLT-v1.2-az.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-az.lite.yaml
@@ -1540,3 +1540,4 @@ timestamp: 1717772476.3332732
 unique_sents: 23372878
 warnings:
 - src_warning_tok_nltk_wordpunct
+hardrules_tags: '{"not_too_long": 452404, "not_too_short": 57172409, "no_urls": 3142455, "no_bad_encoding": 1713}'
