Updated reports for Turkish

--- a/reports/mono-1.2/HPLT-v1.2-tr.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-tr.lite.yaml
@@ -6415,3 +6415,4 @@ srclang: tr
 timestamp: 1719130720.9553344
 unique_sents: 1174862485
 warnings: []
+hardrules_tags: '{"not_too_long": 10741271, "not_too_short": 1258888604, "no_urls": 59022805, "no_bad_encoding": 18102}'
