--- a/reports/mono-2.0/HPLT-v2-tur_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-tur_Latn.lite.yaml
@@ -739,8 +739,7 @@ docs_wds: '[[5, 879803], [5.1, 884542], [5.2, 948372], [5.3, 956576], [5.4, 1085
   [9.2, 1655927], [9.3, 1263119], [9.4, 1041146], [9.5, 853065], [9.6, 784991], [9.7,
   620263], [9.8, 426103], [9.9, 189895], [10, 85367]]'
 corpus: HPLT-v2-tur_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 161992995, "no_urls": 34364599,
-  "no_bad_encoding": 67282, "pii": 4783136}'
+hardrules_tags: '{"not_too_long": 28771336, "not_too_short": 359983199, "no_urls": 43031411, "no_bad_encoding": 86151,  "pii": 4783136}'
 sentence_pairs: 2574897928
 src_bytes: 394.5 GB
 src_chars: 387178346456
