Updated reports for Burmese

--- a/reports/mono-1.2/HPLT-v1.2-my.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-my.yaml
@@ -362,8 +362,7 @@ docs_wds: '[[0.0, 37974], [0.1, 2075], [0.2, 2170], [0.3, 1975], [0.4, 1992], [0
   868], [8.4, 674], [8.5, 564], [8.6, 542], [8.7, 408], [8.8, 430], [8.9, 431], [9.0,
   348], [9.1, 195], [9.2, 140], [9.3, 120], [9.4, 91], [9.5, 107], [9.6, 89], [9.7,
   74], [9.8, 34], [9.9, 20], [10.0, 10]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 15731523, "no_urls": 697480,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 203072, "not_too_short": 15733844, "no_urls": 698955, "no_bad_encoding": 209}' 
 monocleaner_scores: '[[0.0, 1527425], [0.1, 588356], [0.2, 1221573], [0.3, 4233343],
   [0.4, 5797394], [0.5, 7494884], [0.6, 8765841], [0.7, 10110259], [0.8, 6667849],
   [0.9, 1365694]]'
