Updated reports for Punjabi

--- a/reports/mono-1.2/HPLT-v1.2-pa.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-pa.yaml
@@ -234,8 +234,7 @@ docs_wds: '[[0.0, 6751], [0.1, 529], [0.2, 482], [0.3, 381], [0.4, 388], [0.5, 3
   1249], [8.7, 1077], [8.8, 986], [8.9, 906], [9.0, 771], [9.1, 585], [9.2, 495],
   [9.3, 384], [9.4, 408], [9.5, 357], [9.6, 273], [9.7, 218], [9.8, 140], [9.9, 55],
   [10.0, 10]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 7212572, "no_urls": 197581,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 63637, "not_too_short": 7213391, "no_urls": 196786, "no_bad_encoding": 340}'
 monocleaner_scores: '[[0.0, 893414], [0.1, 279703], [0.2, 555400], [0.3, 897487],
   [0.4, 1792044], [0.5, 2398027], [0.6, 3182448], [0.7, 3271082], [0.8, 2979442],
   [0.9, 931925]]'
