--- a/reports/mono-2.0/HPLT-v2-dzo_Tibt.yaml
+++ b/reports/mono-2.0/HPLT-v2-dzo_Tibt.yaml
@@ -48,8 +48,7 @@ docs_wds: '[[5, 166], [5.1, 171], [5.2, 155], [5.3, 93], [5.4, 85], [5.5, 94], [
   [7.9, 5], [8, 7], [8.1, 15], [8.2, 11], [8.3, 5], [8.4, 6], [8.5, 8], [8.6, 10],
   [8.7, 8], [8.8, 3], [8.9, 2], [9, 1], [9.3, 5], [9.5, 1], [9.6, 3]]'
 corpus: dzo_Tibt.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 6181, "no_urls": 89, "no_bad_encoding":
-  0, "pii": 25}'
+hardrules_tags: '{"not_too_long": 256, "not_too_short": 6254, "no_urls": 98, "no_bad_encoding": 0,   "pii": 25}'
 sentence_pairs: 39971
 src_bytes: 19.8 MB
 src_chars: 7336913
