--- a/reports/mono-2.0/HPLT-v2-fur_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fur_Latn.yaml
@@ -96,8 +96,7 @@ docs_wds: '[[5, 339], [5.1, 404], [5.2, 383], [5.3, 340], [5.4, 427], [5.5, 368]
   857], [9.1, 1012], [9.2, 680], [9.3, 553], [9.4, 371], [9.5, 295], [9.6, 216], [9.7,
   214], [9.8, 162], [9.9, 56], [10, 21]]'
 corpus: fur_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 68734, "no_urls": 9221, "no_bad_encoding":
-  5619, "pii": 1999}'
+hardrules_tags: '{"not_too_long": 10765, "not_too_short": 89302, "no_urls": 9366, "no_bad_encoding": 5692, "pii": 1999}'
 sentence_pairs: 730045
 src_bytes: 112.39 MB
 src_chars: 114043358
