Updated reports for Hungarian

--- a/reports/mono-1.2/HPLT-v1.2-hu.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-hu.lite.yaml
@@ -4984,3 +4984,4 @@ srclang: hu
 timestamp: 1718310310.6225421
 unique_sents: 322164508
 warnings: []
+hardrules_tags: '{"not_too_long": 6099352, "not_too_short": 609351525, "no_urls": 41228690, "no_bad_encoding": 34872}'
