--- a/reports/mono-2.0/HPLT-v2-hun_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-hun_Latn.lite.yaml
@@ -621,8 +621,7 @@ docs_wds: '[[5, 369157], [5.1, 378821], [5.2, 402217], [5.3, 407758], [5.4, 4408
   [9.3, 1056164], [9.4, 975479], [9.5, 932462], [9.6, 899367], [9.7, 669093], [9.8,
   450567], [9.9, 201118], [10, 55379]]'
 corpus: HPLT-v2-hun_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 177188801, "no_urls": 30794331,
-  "no_bad_encoding": 76167, "pii": 8295001}'
+hardrules_tags: '{"not_too_long": 18216541, "not_too_short": 225143958, "no_urls": 31148919, "no_bad_encoding": 80505,   "pii": 8295001}'
 sentence_pairs: 1418768608
 src_bytes: 228.8 GB
 src_chars: 223833111798
