--- a/reports/mono-1.2/HPLT-v1.2-vi.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-vi.lite.yaml
@@ -821,3 +821,4 @@ timestamp: 1719575459.7991824
 unique_sents: 0
 warnings:
 - src_warning_tok_nltk_wordpunct
+hardrules_tags: '{"not_too_long": 7060324, "not_too_short": 1337248965, "no_urls": 93342179, "no_bad_encoding": 5508408}'
