--- a/reports/mono-1.2/HPLT-v1.2-fi.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-fi.lite.yaml
@@ -2854,3 +2854,4 @@ srclang: fi
 timestamp: 1717975991.5849767
 unique_sents: 118032541
 warnings: []
+hardrules_tags: '{"not_too_long": 3471927, "not_too_short": 379244036, "no_urls": 18250340, "no_bad_encoding": 9215}'
