Updated reports for Estonian

--- a/reports/mono-1.2/HPLT-v1.2-et.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-et.lite.yaml
@@ -1872,3 +1872,4 @@ srclang: et
 timestamp: 1717813358.1826937
 unique_sents: 49739260
 warnings: []
+hardrules_tags: '{"not_too_long": 569443, "not_too_short": 80746777, "no_urls": 4214376, "no_bad_encoding": 5203}'
