--- a/reports/mono-1.2/HPLT-v1.2-ro.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-ro.lite.yaml
@@ -5706,3 +5706,4 @@ srclang: ro
 timestamp: 1718271499.952554
 unique_sents: 364529431
 warnings: []
+hardrules_tags: '{"not_too_long": 5651370, "not_too_short": 764808570, "no_urls": 54889622, "no_bad_encoding": 2973737}'
