--- a/reports/mono-2.0/HPLT-v2-srp_Cyrl.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-srp_Cyrl.lite.yaml
@@ -313,8 +313,7 @@ docs_wds: '[[5, 23758], [5.1, 23962], [5.2, 25327], [5.3, 25430], [5.4, 29429], 
   [9.1, 88027], [9.2, 69105], [9.3, 59888], [9.4, 55214], [9.5, 51391], [9.6, 49868],
   [9.7, 41673], [9.8, 31666], [9.9, 15118], [10, 4029]]'
 corpus: HPLT-v2-srp_Cyrl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 11178664, "no_urls": 896414,
-  "no_bad_encoding": 684, "pii": 296431}'
+hardrules_tags: '{"not_too_long": 1198419, "not_too_short": 12032637, "no_urls": 940319, "no_bad_encoding": 1282 , "pii": 296431}'
 sentence_pairs: 93809457
 src_bytes: 26.72 GB
 src_chars: 16067193042
