--- a/reports/mono-1.2/HPLT-v1.2-th.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-th.lite.yaml
@@ -4717,3 +4717,4 @@ srclang: th
 timestamp: 1718125105.9195192
 unique_sents: 165778486
 warnings: []
+hardrules_tags: '{"not_too_long": 2960807, "not_too_short": 253012300, "no_urls": 38428454, "no_bad_encoding": 27113}'
