--- a/reports/mono-1.2/HPLT-v1.2-lt.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-lt.lite.yaml
@@ -2485,3 +2485,4 @@ timestamp: 1717852016.1674073
 unique_sents: 74721907
 warnings:
 - src_warning_tok_moses_en
+hardrules_tags: '{"not_too_long": 1056908, "not_too_short": 140753013, "no_urls": 8510322, "no_bad_encoding": 6267}'
