--- a/reports/mono-2.0/HPLT-v2-lit_Latn.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-lit_Latn.lite.yaml
@@ -377,8 +377,7 @@ docs_wds: '[[5, 124650], [5.1, 129823], [5.2, 128644], [5.3, 129697], [5.4, 1383
   [9.4, 261901], [9.5, 257461], [9.6, 243934], [9.7, 164327], [9.8, 94729], [9.9,
   37730], [10, 11518]]'
 corpus: HPLT-v2-lit_Latn.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 22585587, "no_urls": 5414345,
-  "no_bad_encoding": 10620, "pii": 1487313}'
+hardrules_tags: '{"not_too_long": 2331784, "not_too_short": 47632770, "no_urls": 6122650, "no_bad_encoding": 10621 , "pii": 1487313}'
 sentence_pairs: 322156374
 src_bytes: 49.59 GB
 src_chars: 50084920486
