--- a/reports/mono-1.2/HPLT-v1.2-lv.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-lv.lite.yaml
@@ -1962,3 +1962,4 @@ srclang: lv
 timestamp: 1717825406.9372141
 unique_sents: 43993827
 warnings: []
+hardrules_tags: '{"not_too_long": 462479, "not_too_short": 81488715, "no_urls": 5902131, "no_bad_encoding": 5887}'
